--- a/RentACar/RentACar.csproj
+++ b/RentACar/RentACar.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\202502090936225_RentACarMigration.Designer.cs">
       <DependentUpon>202502090936225_RentACarMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502151146353_customTableName.cs" />
+    <Compile Include="Migrations\202502151146353_customTableName.Designer.cs">
+      <DependentUpon>202502151146353_customTableName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ORM\Context\DataContext.cs" />
     <Compile Include="ORM\Entity\Araba.cs" />
@@ -106,6 +110,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502090936225_RentACarMigration.resx">
       <DependentUpon>202502090936225_RentACarMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502151146353_customTableName.resx">
+      <DependentUpon>202502151146353_customTableName.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
