--- a/RentACar/RentACar.csproj
+++ b/RentACar/RentACar.csproj
@@ -56,11 +56,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAracDetayVeKirala.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAracDetayVeKirala.Designer.cs">
+      <DependentUpon>frmAracDetayVeKirala.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAracEkle.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmAracEkle.Designer.cs">
       <DependentUpon>frmAracEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAracListesi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAracListesi.Designer.cs">
+      <DependentUpon>frmAracListesi.cs</DependentUpon>
     </Compile>
     <Compile Include="frmKullaniciGiris.cs">
       <SubType>Form</SubType>
@@ -92,8 +104,14 @@
     <Compile Include="ORM\Entity\Yonetici.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAracDetayVeKirala.resx">
+      <DependentUpon>frmAracDetayVeKirala.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAracEkle.resx">
       <DependentUpon>frmAracEkle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAracListesi.resx">
+      <DependentUpon>frmAracListesi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmKullaniciGiris.resx">
       <DependentUpon>frmKullaniciGiris.cs</DependentUpon>
